tools/metrics-cluster/manifests/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
      #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "metrics.waynr.net"
    http:
      paths:
      - pathType: Prefix
        path: "/grafana(/|$)(.*)"
        backend:
          service:
            name: grafana
            port:
              number: 80
